Update testAPI.java